k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-demo
  namespace: jwt-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-demo
  template:
    metadata:
      labels:
        app: jwt-demo
    spec:
      containers:
        - name: jwt-demo
          image: ravilez/jwt-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
