k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: jwt-demo
spec:
  type: NodePort
  selector:
    app: jwt-demoy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
